<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp"

    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <TextView-->
<!--        android:id="@+id/idText"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginLeft="16dp"-->
<!--        android:textSize="23sp"-->
<!--        android:text="@string/id"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->
<!--    <TextView-->
<!--        android:id="@+id/nameText"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginLeft="16dp"-->
<!--        android:textSize="23sp"-->
<!--        android:text="@string/name"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/idText" />-->

<!--    <TextView-->
<!--        android:id="@+id/AuthorText"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginLeft="16dp"-->
<!--        android:textSize="23sp"-->
<!--        android:text="@string/authorName"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/nameText"-->

<!--        />-->

<!--    <TextView-->
<!--        android:id="@+id/priceText"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginLeft="16dp"-->
<!--        android:textSize="23sp"-->
<!--        android:text="@string/price"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/AuthorText" />-->

<!--    <LinearLayout-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="12dp"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/priceText"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent">-->

<!--        <Button-->
<!--            android:id="@+id/update"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="5dp"-->
<!--            android:layout_weight="1"-->
<!--            android:text="@string/update" />-->

<!--        <Button-->
<!--            android:id="@+id/delete"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="5dp"-->
<!--            android:layout_weight="1"-->
<!--            android:text="@string/delete" />-->
<!--    </LinearLayout>-->


<!--    <com.google.android.material.appbar.MaterialToolbar-->
<!--        android:id="@+id/materialToolbar"-->
<!--        android:layout_width="417dp"-->
<!--        android:layout_height="294dp"-->
<!--        android:background="?attr/colorPrimary"-->
<!--        android:minHeight="?attr/actionBarSize"-->
<!--        android:theme="?attr/actionBarTheme"-->
<!--        tools:layout_editor_absoluteX="7dp"-->
<!--        tools:layout_editor_absoluteY="-8dp" />-->

    <TextView
        android:id="@+id/idText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/id"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.002"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idText" />

    <TextView
        android:id="@+id/authorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/authorName"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />


    <!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/dateLayout"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="170dp"-->
<!--        android:layout_height="39dp"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:hint="@string/dob"-->
<!--        app:endIconDrawable="@drawable/baseline_edit_24"-->
<!--        app:endIconMode="custom"-->
<!--        app:endIconTint="@color/teal_700"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent">-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.textfield.TextInputEditText-->

    <TextView
        android:id="@+id/priceText"
        android:layout_width="143dp"
        android:layout_height="25dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/price"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authorText" />

    <Button
        android:id="@+id/edit"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="56dp"
        android:clickable="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:paddingVertical="12dp"
        android:textSize="16sp"
        app:endIconMode="custom"
        app:endIconTint="@color/white"
        app:icon="@drawable/baseline_edit_24"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/delete"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="false"

        android:focusableInTouchMode="false"
        android:inputType="none"
        android:paddingVertical="12dp"
        android:textSize="16sp"
        app:endIconMode="custom"
        app:endIconTint="@color/black"
        app:icon="@drawable/baseline_auto_delete_24"
        app:layout_constraintStart_toEndOf="@+id/priceText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit" />


</androidx.constraintlayout.widget.ConstraintLayout>